--- a/projects/ASR6601CB-EVAL/examples/uart/uart_printf/Makefile
+++ b/projects/ASR6601CB-EVAL/examples/uart/uart_printf/Makefile
@@ -5,13 +5,20 @@ $(PROJECT)_SOURCE := $(wildcard src/*.c)  \
     $(TREMO_SDK_PATH)/platform/system/printf-stdarg.c  \
     $(TREMO_SDK_PATH)/platform/system/system_cm4.c  \
     $(TREMO_SDK_PATH)/platform/system/startup_cm4.S \
-    $(wildcard $(TREMO_SDK_PATH)/drivers/peripheral/src/*.c)
+    $(wildcard $(TREMO_SDK_PATH)/drivers/peripheral/src/*.c) \
+    $(wildcard $(TREMO_SDK_PATH)/lora/system/*.c) \
+    $(wildcard $(TREMO_SDK_PATH)/lora/radio/sx126x/*.c) \
+    $(wildcard $(TREMO_SDK_PATH)/lora/driver/*.c)
 
 $(PROJECT)_INC_PATH := inc \
     $(TREMO_SDK_PATH)/platform/CMSIS \
     $(TREMO_SDK_PATH)/platform/common \
     $(TREMO_SDK_PATH)/platform/system \
-    $(TREMO_SDK_PATH)/drivers/peripheral/inc
+    $(TREMO_SDK_PATH)/drivers/peripheral/inc \
+    $(TREMO_SDK_PATH)/lora/system/ \
+    $(TREMO_SDK_PATH)/lora/driver/ \
+    $(TREMO_SDK_PATH)/lora/radio/ \
+    $(TREMO_SDK_PATH)/lora/radio/sx126x/
 
 $(PROJECT)_CFLAGS  := -Wall -Os -ffunction-sections -mfpu=fpv4-sp-d16 -mfloat-abi=softfp -fsingle-precision-constant -std=gnu99 -fno-builtin-printf -fno-builtin-sprintf -fno-builtin-snprintf
 $(PROJECT)_DEFINES := -DCONFIG_DEBUG_UART=UART0
