--- a/projects/ASR6601CB-EVAL/examples/lora/pingpong/Makefile
+++ b/projects/ASR6601CB-EVAL/examples/lora/pingpong/Makefile
@@ -23,7 +23,7 @@ $(PROJECT)_INC_PATH := inc \
     $(TREMO_SDK_PATH)/lora/radio/ \
     $(TREMO_SDK_PATH)/lora/radio/sx126x/
 
-$(PROJECT)_CFLAGS  := -Wall -Os -ffunction-sections -mfpu=fpv4-sp-d16 -mfloat-abi=softfp -fsingle-precision-constant -std=gnu99 -fno-builtin-printf -fno-builtin-sprintf -fno-builtin-snprintf
+$(PROJECT)_CFLAGS  := -Wall -Os -ffunction-sections -mfpu=fpv4-sp-d16 -mfloat-abi=softfp -fsingle-precision-constant -std=gnu99 -fno-builtin-printf -fno-builtin-sprintf -fno-builtin-snprintf -
 $(PROJECT)_DEFINES := -DCONFIG_DEBUG_UART=UART0 -DUSE_MODEM_LORA -DREGION_IN865
 
 $(PROJECT)_LDFLAGS := -Wl,--gc-sections -Wl,--wrap=printf -Wl,--wrap=sprintf -Wl,--wrap=snprintf
