--- a/projects/ASR6601CB-EVAL/examples/rtc/cyc/Makefile
+++ b/projects/ASR6601CB-EVAL/examples/rtc/cyc/Makefile
@@ -2,6 +2,7 @@
 PROJECT := $(notdir $(CURDIR))
 
 $(PROJECT)_SOURCE := $(wildcard src/*.c)  \
+    $(TREMO_SDK_PATH)/platform/system/printf-stdarg.c  \
     $(TREMO_SDK_PATH)/platform/system/system_cm4.c  \
     $(TREMO_SDK_PATH)/platform/system/startup_cm4.S \
     $(wildcard $(TREMO_SDK_PATH)/drivers/peripheral/src/*.c)
@@ -13,7 +14,7 @@ $(PROJECT)_INC_PATH := inc \
     $(TREMO_SDK_PATH)/drivers/peripheral/inc
 
 $(PROJECT)_CFLAGS  := -Wall -Os -ffunction-sections -mfpu=fpv4-sp-d16 -mfloat-abi=softfp -fsingle-precision-constant -std=gnu99 -fno-builtin-printf -fno-builtin-sprintf -fno-builtin-snprintf
-$(PROJECT)_DEFINES :=
+$(PROJECT)_DEFINES := -DCONFIG_DEBUG_UART=UART0
 
 $(PROJECT)_LDFLAGS := -Wl,--gc-sections -Wl,--wrap=printf -Wl,--wrap=sprintf -Wl,--wrap=snprintf
 
@@ -22,7 +23,7 @@ $(PROJECT)_LIBS :=
 $(PROJECT)_LINK_LD := cfg/gcc.ld
 
 # please change the settings to download the app
-#SERIAL_PORT        :=
+SERIAL_PORT        := /dev/ttyUSB2
 #SERIAL_BAUDRATE    :=
 #$(PROJECT)_ADDRESS :=
 
